--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,14 +17,15 @@ LazyData: true
 Depends: R (>= 4.3.0)
 Imports: limma, stats, methods, RColorBrewer, clusterProfiler,
         readxl, cluster, factoextra, stringr, AnnotationDbi, ComplexHeatmap,  
-        GetoptLong, bigstatsr, colorRamp2, 
-        doParallel, foreach, ggplot2, 
-        grid, parallel, patchwork, pbapply, 
-        reshape2, seriation, graphics, simplifyEnrichment, slam, 
-        utils, grDevices, rGREAT (>= 2.1), org.Hs.eg.db, org.Mm.eg.db, 
-        STRINGdb, GGally, network, httr, jsonlite, dplyr, shiny
+        GetoptLong, bigstatsr, colorRamp2, doParallel, foreach, ggplot2, 
+        grid, parallel, patchwork, pbapply, reshape2, seriation, graphics, 
+        simplifyEnrichment, slam, utils, grDevices, rGREAT (>= 2.1), 
+        org.Hs.eg.db, org.Mm.eg.db, STRINGdb, GGally, network, httr, jsonlite, 
+        dplyr, shiny
 Suggests: RUnit, BiocGenerics, knitr (>= 1.6), rmarkdown, BiocStyle (>= 1.3), 
-        roxygen2
+        roxygen2, shinythemes, shinydashboard, shinyWidgets, shinyBS, shinyjs,
+        shinyalert, shinyFiles, shinybusy, DT, GO.db, htmltools, ggplotify, 
+        gridExtra, ggwordcloud, tools, powerjoin, imputeTS
 VignetteBuilder: knitr
 RoxygenNote: 7.3.1
 git_url: https://github.com/TranslationalBioinformaticsUnit/GeneSetCluster2.0
