--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 2.0
 Authors@R: c(person("Asier", "Ortega-Legarreta", role = c("aut","cre"),  
            email = "aortegal@navarra.es", 
            comment = c(ORCID = "0009-0000-3563-5362")),
-           person("Alberto", "Maillo", role = c("aut"),  
+           person("Alberto", "Maillo", role = c("aut", "cre"),  
            email = "alberto.ruizdeinfante@kaust.edu.sa"),
            person("Ewoud", "Ewing", role = c("aut"),  
            email = "ewoud.ewing@ki.se"))
@@ -21,7 +21,7 @@ Imports: limma, stats, methods, RColorBrewer, clusterProfiler,
         grid, parallel, patchwork, pbapply, reshape2, seriation, graphics, 
         simplifyEnrichment, slam, utils, grDevices, rGREAT (>= 2.1), 
         org.Hs.eg.db, org.Mm.eg.db, STRINGdb, GGally, network, httr, jsonlite, 
-        dplyr, shiny
+        dplyr, sna, shiny
 Suggests: RUnit, BiocGenerics, knitr (>= 1.6), rmarkdown, BiocStyle (>= 1.3), 
         roxygen2, shinythemes, shinydashboard, shinyWidgets, shinyBS, shinyjs,
         shinyalert, shinyFiles, shinybusy, DT, GO.db, htmltools, ggplotify, 
