--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ import(reshape2)
 import(seriation)
 import(simplifyEnrichment)
 import(slam)
+import(sna)
 import(stringr)
 import(utils)
 importFrom(ComplexHeatmap,Heatmap)
